# 1121_Design_Automation

./: .gitignore  README.md
project1/: CMakeLists.txt  README.md  input.txt  main.cpp  ref.cpp
project1/input/: input.txt  public_input1.txt  public_input3.txt  public_input4.txt  public_input5.txt
project1/output/: public_output1.txt  public_output3.txt  public_output4.txt  public_output5.txt
project1/src/: CMakeLists.txt  README.md  main.cpp  makefile
project2/: Dockerfile
project2-2/input/: input.txt
project3/: CMakeLists.txt  Dockerfile
